[package]
name = "rblink"
version = "0.1.0"
edition = "2024"
description = "A minimal HTTP server written in pure Rust"
keywords = ["http", "server", "rust"]
license-file = "LICENSE"
categories = ["web-programming", "web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/mi66mc/rblink"

[dependencies]
